--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ footer{
     width: 800px;
     background-color: rgb(0, 0, 255);
 }
-.sezione2 aside{
+.colonna_laterali{
     background-color: rgb(135, 206, 250);
     float: left;
     height: 320px;
@@ -41,6 +41,9 @@ footer{
     display: table;
     clear: both;
 }
+.row{
+    padding-bottom: 10px;
+}
 /* fine sezione centrale */
 
 .sezione_sottotitolo{
@@ -49,11 +52,11 @@ footer{
     background-color: rgb(135, 206, 250);
     margin-bottom: 10px;
 }
-.sezione_centrale{
+.colonna_centrale{
     background-color: rgb(135, 206, 250);
     float: left;
     width: calc( 100% - 40% - 20px);
     height: 320px;
-    margin: 0 10px 10px;
+    margin: 0 10px;
 }
 
